backend/internal/architecture/testdata/valid/internal/modules/catalog/internal/postgres/article_model.go
package postgres

type articleModel struct{}
