backend/internal/architecture/testdata/invalid/internal/modules/bad/results.go
package bad

type result struct{}
